Closed
Bug 1759962
Opened 3 years ago
Closed 3 years ago
Mispositioned context menus in RDM with override DPI
Categories
(DevTools :: Responsive Design Mode, defect)
DevTools
Responsive Design Mode
Tracking
(firefox-esr91 unaffected, firefox98 unaffected, firefox99 wontfix, firefox100 fixed)
RESOLVED
FIXED
100 Branch
Tracking | Status | |
---|---|---|
firefox-esr91 | --- | unaffected |
firefox98 | --- | unaffected |
firefox99 | --- | wontfix |
firefox100 | --- | fixed |
People
(Reporter: emilio, Assigned: emilio)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
I suspect this is due to bug 1753836.
STR:
- Open RDM.
- Set the DPR to a value that doesn't match your native DPR.
- Right-click anywhere on the page.
AR:
- Context menu is mispositioned.
ER:
- Context menu works as usual.
Assignee | ||
Comment 1•3 years ago
|
||
Chrome code should be able to rely on CSS pixel * devicePixelRatio =
device pixel.
Chrome code that cares about the override should use
BrowsingContext.overrideDPPX. We were exposing the no-override value in
WindowUtils but that's unneeded now.
Updated•3 years ago
|
Keywords: regression
Comment 2•3 years ago
|
||
Set release status flags based on info from the regressing bug 1753836
status-firefox100:
--- → affected
status-firefox98:
--- → unaffected
status-firefox99:
--- → affected
status-firefox-esr91:
--- → unaffected
Updated•3 years ago
|
Has Regression Range: --- → yes
Updated•3 years ago
|
Severity: -- → S3
Updated•3 years ago
|
Component: DOM: Core & HTML → Responsive Design Mode
Product: Core → DevTools
Updated•3 years ago
|
Pushed by ealvarez@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/a3e5601e310c
Don't return the DPI override in devicePixelRatio to privileged code. r=nchevobbe,webdriver-reviewers
Comment 4•3 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 100 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•