remote/cdp/test/browser/emulation/browser_setDeviceMetricsOverride.js
@@ -8,6 +8,15 @@ const DOC_LARGE = toDataURL("<div style='margin: 150vh 0 0 150vw'>Hello world");
 
 const MAX_WINDOW_SIZE = 10000000;
 
+function getContentDPR() {
+  info(`Retrieve device pixel ratio in content`);
+  return SpecialPowers.spawn(
+    gBrowser.selectedBrowser,
+    [],
+    _ => content.browsingContext.overrideDPPX || content.devicePixelRatio
+  );
+}
+
 add_task(async function dimensionsSmallerThanWindow({ client }) {
   const { Emulation, Page } = client;
 
@@ -193,7 +202,7 @@ add_task(async function failsWithNegativeWidth({ client }) {
 
   await loadURL(DOC_SMALL);
   const { layoutViewport } = await Page.getLayoutMetrics();
-  const ratio = await getContentProperty("devicePixelRatio");
+  const ratio = await getContentDPR();
 
   const overrideSettings = {
     width: -1,
@@ -222,11 +231,7 @@ add_task(async function failsWithNegativeWidth({ client }) {
     layoutViewport.clientHeight,
     "Visible layout height hasn't been changed"
   );
-  is(
-    await getContentProperty("devicePixelRatio"),
-    ratio,
-    "Device pixel ratio hasn't been changed"
-  );
+  is(await getContentDPR(), ratio, "Device pixel ratio hasn't been changed");
 });
 
 add_task(async function failsWithTooLargeWidth({ client }) {
@@ -234,7 +239,7 @@ add_task(async function failsWithTooLargeWidth({ client }) {
 
   await loadURL(DOC_SMALL);
   const { layoutViewport } = await Page.getLayoutMetrics();
-  const ratio = await getContentProperty("devicePixelRatio");
+  const ratio = await getContentDPR();
 
   const overrideSettings = {
     width: MAX_WINDOW_SIZE + 1,
@@ -263,11 +268,7 @@ add_task(async function failsWithTooLargeWidth({ client }) {
     layoutViewport.clientHeight,
     "Visible layout height hasn't been changed"
   );
-  is(
-    await getContentProperty("devicePixelRatio"),
-    ratio,
-    "Device pixel ratio hasn't been changed"
-  );
+  is(await getContentDPR(), ratio, "Device pixel ratio hasn't been changed");
 });
 
 add_task(async function failsWithNegativeHeight({ client }) {
@@ -275,7 +276,7 @@ add_task(async function failsWithNegativeHeight({ client }) {
 
   await loadURL(DOC_SMALL);
   const { layoutViewport } = await Page.getLayoutMetrics();
-  const ratio = await getContentProperty("devicePixelRatio");
+  const ratio = await getContentDPR();
 
   const overrideSettings = {
     width: Math.floor(layoutViewport.clientWidth / 2),
@@ -304,11 +305,7 @@ add_task(async function failsWithNegativeHeight({ client }) {
     layoutViewport.clientHeight,
     "Visible layout height hasn't been changed"
   );
-  is(
-    await getContentProperty("devicePixelRatio"),
-    ratio,
-    "Device pixel ratio hasn't been changed"
-  );
+  is(await getContentDPR(), ratio, "Device pixel ratio hasn't been changed");
 });
 
 add_task(async function failsWithTooLargeHeight({ client }) {
@@ -316,7 +313,7 @@ add_task(async function failsWithTooLargeHeight({ client }) {
 
   await loadURL(DOC_SMALL);
   const { layoutViewport } = await Page.getLayoutMetrics();
-  const ratio = await getContentProperty("devicePixelRatio");
+  const ratio = await getContentDPR();
 
   const overrideSettings = {
     width: Math.floor(layoutViewport.clientWidth / 2),
@@ -345,11 +342,7 @@ add_task(async function failsWithTooLargeHeight({ client }) {
     layoutViewport.clientHeight,
     "Visible layout height hasn't been changed"
   );
-  is(
-    await getContentProperty("devicePixelRatio"),
-    ratio,
-    "Device pixel ratio hasn't been changed"
-  );
+  is(await getContentDPR(), ratio, "Device pixel ratio hasn't been changed");
 });
 
 add_task(async function setDevicePixelRatio({ client }) {
@@ -357,7 +350,7 @@ add_task(async function setDevicePixelRatio({ client }) {
 
   await loadURL(DOC_SMALL);
   const { layoutViewport } = await Page.getLayoutMetrics();
-  const ratio_orig = await getContentProperty("devicePixelRatio");
+  const ratio_orig = await getContentDPR();
 
   const overrideSettings = {
     width: layoutViewport.clientWidth,
@@ -369,11 +362,7 @@ add_task(async function setDevicePixelRatio({ client }) {
   await Emulation.setDeviceMetricsOverride(overrideSettings);
   await loadURL(DOC_SMALL);
 
-  is(
-    await getContentProperty("devicePixelRatio"),
-    ratio_orig * 2,
-    "Expected device pixel ratio set"
-  );
+  is(await getContentDPR(), ratio_orig * 2, "Expected device pixel ratio set");
 });
 
 add_task(async function failsWithNegativeRatio({ client }) {
@@ -381,7 +370,7 @@ add_task(async function failsWithNegativeRatio({ client }) {
 
   await loadURL(DOC_SMALL);
   const { layoutViewport } = await Page.getLayoutMetrics();
-  const ratio = await getContentProperty("devicePixelRatio");
+  const ratio = await getContentDPR();
 
   const overrideSettings = {
     width: Math.floor(layoutViewport.clientHeight / 2),
@@ -410,9 +399,5 @@ add_task(async function failsWithNegativeRatio({ client }) {
     layoutViewport.clientHeight,
     "Visible layout height hasn't been changed"
   );
-  is(
-    await getContentProperty("devicePixelRatio"),
-    ratio,
-    "Device pixel ratio hasn't been changed"
-  );
+  is(await getContentDPR(), ratio, "Device pixel ratio hasn't been changed");
 });
