testing/mochitest/tests/SimpleTest/EventUtils.js
@@ -1057,7 +1057,6 @@ function synthesizeNativeMouseEvent(aParams, aCallback = null) {
     screenX, // X offset in screen (in CSS pixels if `scale` is "screenPixelsPerCSSPixel*"), offsetX/Y nor atCenter must not be set if this is set
     screenY, // Y offset in screen (in CSS pixels if `scale` is "screenPixelsPerCSSPixel*"), offsetX/Y nor atCenter must not be set if this is set
     // If scale is "screenPixelsPerCSSPixel", devicePixelRatio will be used.
-    // If scale is "screenPixelsPerCSSPixelNoOverride", it'll be used.
     // If scale is "inScreenPixels", clientX/Y nor scaleX/Y are not adjusted with screenPixelsPerCSSPixel*.
     scale = "screenPixelsPerCSSPixel",
     button = 0, // if "click", "mousedown", "mouseup", set same value as DOM MouseEvent.button
@@ -1118,9 +1117,6 @@ function synthesizeNativeMouseEvent(aParams, aCallback = null) {
     }
     if (scale === "screenPixelsPerCSSPixel") {
       return win.devicePixelRatio;
-    }
-    if (scale === "screenPixelsPerCSSPixelNoOverride") {
-      return utils.screenPixelsPerCSSPixelNoOverride;
     }
     throw Error(`invalid scale value (${scale}) is specified`);
   })();
